--- a/cioppino/twothumbs/browser/stylesheets/twothumbs.css
+++ b/cioppino/twothumbs/browser/stylesheets/twothumbs.css
@@ -15,7 +15,7 @@
 form input.like-button,
 form input.dislike-button {
     padding: 10px 0;
-    background-color:inherit;
+    background-color:transparent;
 	background-image: url(++resource++cioppino.twothumbs.images/thumbs-sprite.png);
     background-repeat: no-repeat;
     border-width: 0;
