--- a/cioppino/twothumbs/browser/stylesheets/twothumbs.css
+++ b/cioppino/twothumbs/browser/stylesheets/twothumbs.css
@@ -17,7 +17,7 @@
 
 form input.like-button,
 form input.dislike-button {
-    padding: 8px 0;
+    padding: 10px 0 7px;
     background-color:transparent;
 	background-image: url(++resource++cioppino.twothumbs.images/thumbs-sprite.png);
     background-repeat: no-repeat;
